force-app/main/default/objects/Contact/fields/Certification_Validation__c.field-meta.xml
<CustomField>
    <fullName>Certification_Validation__c</fullName>
    <description>The Certification validation link</description>
    <inlineHelpText>The url should be http://certification.salesforce.com/verification-email?init=1&amp;email=&lt;youremailaddress&gt;</inlineHelpText>
    <label>Certification Validation</label>
    <type>Url</type>
</CustomField>