force-app/main/default/objects/Contact/fields/LinkedIn_Profile__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile__c</fullName>
    <description>URL for Contact&#39;s LinkedIn Profile</description>
    <inlineHelpText>Enter in your LinkedIn Profile site URL</inlineHelpText>
    <label>LinkedIn Profile</label>
    <type>Url</type>
</CustomField>