force-app/main/default/objects/Contact/fields/Personal_Website__c.field-meta.xml
<CustomField>
    <fullName>Personal_Website__c</fullName>
    <description>URL for Contact&#39;s personal website</description>
    <inlineHelpText>Enter in the URL for a personal website</inlineHelpText>
    <label>Personal Website</label>
    <type>Url</type>
</CustomField>