force-app/main/default/objects/Contact/fields/Trailhead_Profile__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Profile__c</fullName>
    <description>URL for Contact&#39;s Trailhead Profile</description>
    <inlineHelpText>Enter in your Salesforce trailhead profile URL.</inlineHelpText>
    <label>Trailhead Profile</label>
    <type>Url</type>
</CustomField>