force-app/main/default/objects/Contact/recordTypes/Resume_Contact.recordType-meta.xml
<RecordType>
    <fullName>Resume_Contact</fullName>
    <active>true</active>
    <description>Contact record for a Resume</description>
    <label>Resume Contact</label>
</RecordType>